# Smart-UAV-Ambulance-with-AirSim

./: README.md  settings.json
assignment_pkg/: CMakeLists.txt  package.xml
assignment_pkg/launch/: assignment.launch
assignment_pkg/msg/: VelCmd.msg
assignment_pkg/scripts/: AirSimWrapper.py  Logger.py  elevation_cli.py  elevation_service.py  global_planner.py  local_planner.py
assignment_pkg/srv/: Elevation_srv.srv
maps/: flight_restriction_areas.kml  generate_points.ipynb
