<?xml version="1.0"?>
<package format="2">
  <name>assignment_pkg</name>
  <version>0.0.0</version>
  <description>The assignment_pkg package</description>

  <maintainer email="S4822677@studenti.unige.it">Gabriele Nicchiarelli</maintainer>

  <license>AFL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>airsim_ros_pkgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>airsim_ros_pkgs</exec_depend>

</package>
